# travis-cmake-test

./: .travis.yml  CMakeLists.txt
src/: foo.cpp  foo.hpp  main.cpp
tests/: tests.cpp
